playlist.css
#top-bar-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
}

.top-bar {
  background-color: #f9f9f9;
  text-align: center;
}

.top-bar > ul {
  border-bottom-color: #b9b3c3;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  margin:0px;
  padding: 0px;
  text-align: center;
}

.top-bar-button {
  text-align: center;
  overflow : auto;
  display:inline-block;
  margin-left: 10%;
  margin-right: 10%;
}

.top-bar-button > span {
  display : block;
  margin: 2px;
}
.active .top-bar-button-icon-glyph {
  color : #810082;
}
.active .top-bar-button-icon-text {
  color : #820054;
}
.top-bar-button-icon-glyph {
  font-size: 150%;
  color : #333333;
}
.top-bar-button-icon-text {
  font-size: 75%;
  color : #8c8c8c;
}

#content-view {
  background-color: #E8E0F4;
  text-align: center;
  overflow: scroll;
  padding-top: 48px;
  position:static;
  z-index: 0;
}

.purple-button {
  border:0px;
  padding: 4px;
  margin-top: 8px;
  border-radius: 5px;
  background-color: #936ac7;
  color: white;
  display:inline-block;
}
#new-playlist-button {
  width:95%;
}
.music-item-list {
  padding:0px;
}

.music-item {
  display:block;
  height: 75px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-bottom-color: #979797;
  margin-left: 5%;
  margin-right: 5%;

  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 30px;
  padding-right: 30px;

}
.music-item:active {
  background-color: #cac3d5;
}

.music-cover-thumbnail {
  float: left;
  border-width: 1px;
  border-style: solid;
  border-color: #979797;
  width: 46px;
  height: 40px;
  background-color: #d8d8d8;
}
.music-title {
  color: #835797;
}
.playlist-expand-button {
  float: right;
  font-size: 200%;
  color: #808080;
}

